refactor: simplify formatters with annotation-driven padding, remove duplicated helpers
Move all field layout, padding and alignment into library annotations:
- BeanIoCodaRecord: already had padding='0'/align=RIGHT (no change)
- Ff4jCodaRecord: add align=RIGHT/paddingChar='0' to amountStr, align=RIGHT to sequenceNumber
- BindyCodaRecord: add align="R"/paddingChar='0' to amountStr, align="R" to sequenceNumber, trim=true
- VlCodaRecord: v0.15 has no annotation support for align/fillChar — documented in formatter

Remove pad(), padRight(), padAmount() static helpers from all 4 formatters.
Simplify every toXxx() conversion to pass raw values only (orEmpty/amountToStr).

Extract parseSwiftSection() from all 4 formatters into SwiftMtRecord.fromSwiftSection()
as a static method symmetric with toSwiftFormat() — eliminates 4 identical copies.